Changing link section from flexbox to simple vertical text to avoid horizontal overflow

--- a/src/CSS/Core.css
+++ b/src/CSS/Core.css
@@ -366,6 +366,12 @@ video,
 .mod-nomargin-top {
   margin-top: 0;
 }
+.mod-small-margin-bottom {
+  margin-bottom: 5px;
+}
+.mod-small-margin-top {
+  margin-top: 5px;
+}
 .mod-nopadding {
   padding: 0;
 }
